<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="22dp"
    android:layout_marginRight="22dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"

        android:textSize="@dimen/small_font_size"
        android:textColor="?android:textColorPrimary"
        android:text="@string/timeout_explanation" />
    <EditText
        android:id="@+id/timeoutEditText"
        style="@style/SmallSessionEditText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"

        android:gravity="center_vertical"
        android:hint="@string/enter_timeout"
        android:inputType="number"
        android:maxLength="4"
        android:maxLines="1"
        android:paddingTop="0dp"
        android:paddingBottom="0dp" />
    <TextView
        android:id="@+id/number_of_fake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:textSize="@dimen/small_font_size"
        android:textColor="?android:textColorPrimary"
        tools:text="@string/items_in_database_explanation" />
    <EditText
        android:id="@+id/setupDatabaseSize"
        style="@style/SmallSessionEditText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:hint="@string/enter_database_size"
        android:inputType="number"
        android:maxLength="3"
        android:maxLines="1"
        android:paddingTop="0dp"
        android:paddingBottom="0dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/small_font_size"
        android:textColor="?android:textColorPrimary"
        android:text="@string/select_partisan_prefix_explanation" />
    <EditText
        android:id="@+id/setupPrefix"
        style="@style/SmallSessionEditText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_prefix"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:paddingTop="0dp"
        android:paddingBottom="0dp" />
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>