<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp">

    <EditText
        android:id="@+id/password"
        style="@style/SmallSessionEditText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingTop="0dp"
        android:paddingBottom="0dp" />

        <EditText
            android:id="@+id/enterPassphrase"
            style="@style/SmallSessionEditText"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/activity_restore_seed_edit_text_hint"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:paddingTop="0dp"
            android:paddingBottom="0dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/small_font_size"
            android:visibility="gone"
            android:textColor="?android:textColorPrimary"
            android:text="@string/pim_explanation" />
        <EditText
            android:id="@+id/enter_PMM"
            style="@style/SmallSessionEditText"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="9"
            android:visibility="gone"
            android:hint="@string/enter_pmm"
            android:paddingTop="0dp"
            android:paddingBottom="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textSize="16sp"
                android:lines="1"
                android:visibility="gone"
                android:text="@string/is_destroyer_account"
                android:padding="@dimen/medium_spacing"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/destroyer_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_margin="@dimen/small_spacing" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textSize="16sp"
                android:lines="1"
                android:text="@string/primary_account"
                android:padding="@dimen/medium_spacing"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/primary_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/small_spacing" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>